[package]
name = "simple-rustkvm"
version = "0.1.0"
authors = ["andy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = "0.2.0"
kvm-ioctls = { git = "https://github.com/rust-vmm/kvm-ioctls", branch = "master" }
vm-memory = {git = "https://github.com/rust-vmm/vm-memory", features = ["backend-mmap"] }
